--- a/SleepREST/src/main/resources/application.properties
+++ b/SleepREST/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sleepdb?useSSL=false&&useLegac
 spring.datasource.username=sleepuser
 spring.datasource.password=sleepuser
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jmx.default-domain=SleepTracker
